[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/C, C++/AXD.h

    // 지정한 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터를 출력
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // uValue      : 0x00 ~ 0x0FF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdoWriteOutportByte(long lModuleNo, long lOffset, DWORD uValue);
    
    // 지정한 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터를 출력
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // uValue      : 0x00 ~ 0x0FFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdoWriteOutportWord(long lModuleNo, long lOffset, DWORD uValue);
    
    // 지정한 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터를 출력
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // uValue      : 0x00 ~ 0x0FFFFFFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdoWriteOutportDword(long lModuleNo, long lOffset, DWORD uValue);
    
//==출력 포트 읽기
    // 전체 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    //===============================================================================================//
    // lOffset     : 출력 접점에 대한 Offset 위치
    // *upLevel    : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD    __stdcall AxdoReadOutport(long lOffset, DWORD *upValue);
    
    // 지정한 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // *upLevel    : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD    __stdcall AxdoReadOutportBit(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // *upValue    : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdoReadOutportByte(long lModuleNo, long lOffset, DWORD *upValue);
    
    // 지정한 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // *upValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdoReadOutportWord(long lModuleNo, long lOffset, DWORD *upValue);
    
    // 지정한 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // *upValue    : 0x00 ~ 0x0FFFFFFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdoReadOutportDword(long lModuleNo, long lOffset, DWORD *upValue);
    
//==입력 포트 읽기
    // 전체 입력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    //===============================================================================================//
    // lOffset     : 입력 접점에 대한 Offset 위치
    // *upValue    : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD    __stdcall AxdiReadInport(long lOffset, DWORD *upValue);
    
    // 지정한 입력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // *upValue    : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD    __stdcall AxdiReadInportBit(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 입력 접점 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // *upValue    : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdiReadInportByte(long lModuleNo, long lOffset, DWORD *upValue);
    
    // 지정한 입력 접점 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // *upValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdiReadInportWord(long lModuleNo, long lOffset, DWORD *upValue);
    
    // 지정한 입력 접점 모듈의 Offset 위치에서 double word 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치
    // *upValue    : 0x00 ~ 0x0FFFFFFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD    __stdcall AxdiReadInportDword(long lModuleNo, long lOffset, DWORD *upValue);
    
//== MLII 용 M-Systems DIO(R7 series) 전용 함수.
    // 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치(0~15)
    // *upValue    : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtInportBit(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치(0~1)
    // *upValue    : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtInportByte(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치(0)
    // *upValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtInportWord(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 입력 접점에 대한 Offset 위치(0)
    // *upValue    : 0x00 ~ 0x00000FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtInportDword(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치(0~15)
    // *upValue    : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtOutportBit(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치(0~1)
    // *upValue    : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtOutportByte(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치(0)
    // *upValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtOutportWord(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터를 읽기
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치(0)
    // *upValue    : 0x00 ~ 0x00000FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    //===============================================================================================//
    DWORD   __stdcall AxdReadExtOutportDword(long lModuleNo, long lOffset, DWORD *upValue);
    // 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터 출력
    //===============================================================================================//
    // lModuleNo   : 모듈 번호
    // lOffset     : 출력 접점에 대한 Offset 위치
    // uValue      : LOW(0)
    //             : HIGH(1)
    //===============================================================================================//
    DWORD   __stdcall AxdWriteExtOutportBit(long lModuleNo, long lOffset, DWORD uValue);