[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic(Net)/AXD.vb


    ' 지정한 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터를 출력
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uValue     : 0x00 ~ 0x0FF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoWriteOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터를 출력
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uValue     : 0x00 ~ 0x0FFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoWriteOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터를 출력
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uValue     : 0x00 ~ 0x0FFFFFFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoWriteOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 전체 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    '==============================================================================================='
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upLevel   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoReadOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upLevel   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdoReadOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upValue   : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoReadOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upValue   : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoReadOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 double word 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' *upValue   : 0x00 ~ 0x0FFFFFFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdoReadOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 전체 입력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    '==============================================================================================='
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdiReadInport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : LOW(0)
    '            : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdiReadInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiReadInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiReadInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 double word 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : 0x00 ~ 0x0FFFFFFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdiReadInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    '== MLII 용 M-Systems DIO(R7 series) 전용 함수.
    ' 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0~15)
    ' *upValue    : LOW(0)
    '             : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdReadExtInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0~1)
    ' *upValue    : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdReadExtInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0)
    ' *upValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdReadExtInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 입력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0)
    ' *upValue    : 0x00 ~ 0x00000FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdReadExtInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0~15)
    ' *upValue    : LOW(0)
    '             : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdReadExtOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0~1)
    ' *upValue    : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdReadExtOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0)
    ' *upValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdReadExtOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터를 읽기
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0)
    ' *upValue    : 0x00 ~ 0x00000FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdReadExtOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터 출력
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치
    ' uValue      : LOW(0)
    '             : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdWriteExtOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer
